# GoIT_Web2_HW8

./: pyproject.toml
